import com.oocourse.elevator1.TimableOutput;

import java.util.concurrent.ConcurrentHashMap;

public class MainClass {
    public static void main(String[] args) {
        TimableOutput.initStartTimestamp();
        RequestTable totalTable = new RequestTable();
        ConcurrentHashMap<Integer, RequestTable> requestMap = new ConcurrentHashMap<>();
        for (int i = 1; i < 7; i++) {
            RequestTable requestTable = new RequestTable();
            requestMap.put(i, requestTable); //创建分候乘表的调度器线程端
            ElevatorThread elevatorThread = new ElevatorThread(i, requestTable);
            elevatorThread.start(); //创建并开启一个电梯线程
        }
        DispatchThread dispatchThread = new DispatchThread(totalTable, requestMap);
        dispatchThread.start(); //创建并开启一个调度器线程
        InputThread inputThread = new InputThread(totalTable);
        inputThread.start(); //创建并开启一个输入线程
    }
}
