public enum Status {
    MOVE, WAIT, OPEN, REVERSE, START
}
